# SBER

./: Resume.docx  main.py  pyproject.toml  requirements.txt
