[tool.poetry]
name = "runner"
version = "0.1.0"
description = ""
authors = ["Anastasia Kishkun <Kichkun@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.3"
python-docx = "^0.8.10"
docx = "^0.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
